--- a/sass/_classes.scss
+++ b/sass/_classes.scss
@@ -17,6 +17,15 @@
     height: 2px;
     background-color: $red;
   }
+
+  &__big{
+    font-size: 35px;
+    display: block;
+
+    &::after{
+      background-color: $blue;
+    }
+  }
 }
 
 .card-bordered{
