--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -139,4 +139,56 @@
     width: 100%;
     max-width: 760px;
   }
+
+  &__instagram-posts{
+    &_item{
+      box-shadow: $box-shadow;
+      border-radius: 5px;
+      overflow: hidden;
+    }
+  }
 }
+
+
+.slider{
+  padding-top: 50px;
+  position: relative;
+  &__title{
+    font-size: 35px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: $font-body;
+    margin-bottom: 30px;
+  }
+
+  &__text{
+    font-size: 20px;
+  }
+
+  &__image{
+    width: 335px;
+    height: 335px;
+    overflow: hidden;
+    border-radius: 5px;
+  }
+
+  .swiper-button-next, .swiper-button-prev{
+    position: relative;
+  }
+
+  &__controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &_text{
+      font-size: 12px;
+      font-weight: 600;
+      text-transform: lowercase;
+      margin: 0 18px;
+    }
+  }
+
+}
+
+
