--- a/css/libs.css
+++ b/css/libs.css
@@ -5169,7 +5169,7 @@ body.compensate-for-scrollbar {
 
 .swiper-button-next,
 .swiper-button-prev {
-  z-index: 10;
+  z-index: 4;
   cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5256,7 +5256,10 @@ body.compensate-for-scrollbar {
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .swiper-pagination.swiper-pagination-hidden {
   opacity: 0; }
@@ -5309,15 +5312,20 @@ body.compensate-for-scrollbar {
           transform: scale(0.33); }
 
 .swiper-pagination-bullet {
-  width: 6px;
+  max-width: 6px;
+  min-width: 6px;
   height: 6px;
-  display: inline-block;
-  border-radius: 100%;
+  display: block;
+  border-radius: 50%;
+  margin-right: 35px;
   background: #292929;
-  opacity: 0.5;
-  margin-right: 38px; }
+  opacity: 0.5; }
   .swiper-pagination-bullet:focus {
     outline: none; }
+
+.swiper-pagination .swiper-pagination-bullet:last-child {
+  margin-right: 0;
+  margin-left: 0; }
 
 button.swiper-pagination-bullet {
   border: none;
@@ -5334,15 +5342,11 @@ button.swiper-pagination-bullet {
 
 .swiper-pagination-bullet-active {
   opacity: 1;
-  width: 14px;
-  height: 14px;
+  max-width: 14px;
+  min-width: 14px;
+  min-height: 14px;
+  max-height: 14px;
   background: var(--swiper-pagination-color, var(--swiper-theme-color)); }
-
-.swiper-container-vertical > .swiper-pagination-bullets {
-  right: 10px;
-  top: 50%;
-  -webkit-transform: translate3d(0px, -50%, 0);
-          transform: translate3d(0px, -50%, 0); }
 
 .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
   margin: 6px 0;
@@ -5364,7 +5368,7 @@ button.swiper-pagination-bullet {
   transition: 0.2s transform, 0.2s top, 0.2s -webkit-transform; }
 
 .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0 4px; }
+  margin-right: 38px; }
 
 .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
   left: 50%;
