--- a/sass/_template.scss
+++ b/sass/_template.scss
@@ -65,3 +65,13 @@ button {
     border: none;
   }
 }
+
+input{
+  width: 100%;
+  border: none;
+  padding: 5px 15px;
+  &:focus {
+    outline: none;
+    border: none;
+  }
+}
