--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,9 +1,12 @@
 /* Colors */
 $blue: #207ADB;
+$blue-2: #039BE5;
 $orange: #FE9828;
 $red: #F54528;
 $black: #1E201D;
 $border: #DBDBDB;
+$light-grey: #F8F8F8;
+$grey: #AAAAAA;
 
 /* Others */
 $box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
