--- a/sass/libs/_swiperjs.scss
+++ b/sass/libs/_swiperjs.scss
@@ -125,7 +125,7 @@
 }
 .swiper-button-next,
 .swiper-button-prev {
-  z-index: 10;
+  z-index: 4;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -199,6 +199,7 @@
   z-index: 10;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .swiper-pagination.swiper-pagination-hidden {
   opacity: 0;
@@ -237,17 +238,22 @@
   transform: scale(0.33);
 }
 .swiper-pagination-bullet {
-  width: 6px;
+  max-width: 6px;
+  min-width: 6px;
   height: 6px;
-  display: inline-block;
-  border-radius: 100%;
+  display: block;
+  border-radius: 50%;
+  margin-right: 35px;
   background: #292929;
   opacity: 0.5;
-  margin-right: 38px;
 
   &:focus {
     outline: none;
   }
+}
+.swiper-pagination .swiper-pagination-bullet:last-child{
+  margin-right: 0;
+  margin-left: 0;
 }
 button.swiper-pagination-bullet {
   border: none;
@@ -263,15 +269,14 @@ button.swiper-pagination-bullet {
 }
 .swiper-pagination-bullet-active {
   opacity: 1;
-  width: 14px;
-  height: 14px;
+  max-width: 14px;
+  min-width: 14px;
+  min-height: 14px;
+  max-height: 14px;
   background: var(--swiper-pagination-color, var(--swiper-theme-color));
 }
-.swiper-container-vertical > .swiper-pagination-bullets {
-  right: 10px;
-  top: 50%;
-  transform: translate3d(0px, -50%, 0);
-}
+
+
 .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
   margin: 6px 0;
   display: block;
@@ -286,7 +291,7 @@ button.swiper-pagination-bullet {
   transition: 0.2s transform, 0.2s top;
 }
 .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
-  margin: 0 4px;
+  margin-right: 38px;
 }
 .swiper-container-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
   left: 50%;
