--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -46,8 +46,8 @@
     opacity: 0.5;
   }
 
-  &__gallery{
-    &_item{
+  &__gallery {
+    &_item {
       border-radius: 10px;
       overflow: hidden;
     }
@@ -108,40 +108,40 @@
     }
   }
 
-  &__opportunities{
+  &__opportunities {
     padding: 70px;
-  
-    *{
+
+    * {
       color: white;
     }
 
-    p{
+    p {
       font-size: 20px;
     }
 
-    &_block{
+    &_block {
       width: 100%;
       max-width: 300px;
     }
 
-    &_title{
+    &_title {
       font-weight: bold;
       font-size: 24px;
       font-family: $font-body;
     }
 
-    &_subtitle{
+    &_subtitle {
       font-size: 20px;
     }
   }
 
-  &__instagram-content{
+  &__instagram-content {
     width: 100%;
     max-width: 760px;
   }
 
-  &__instagram-posts{
-    &_item{
+  &__instagram-posts {
+    &_item {
       box-shadow: $box-shadow;
       border-radius: 5px;
       overflow: hidden;
@@ -149,11 +149,10 @@
   }
 }
 
-
-.slider{
+.slider {
   padding-top: 50px;
   position: relative;
-  &__title{
+  &__title {
     font-size: 35px;
     font-weight: bold;
     text-transform: uppercase;
@@ -161,27 +160,36 @@
     margin-bottom: 30px;
   }
 
-  &__text{
+  &__subtitle {
+    margin-bottom: 40px;
+    font-weight: 600;
+    font-size: 20px;
+    font-family: $font-body;
+    text-transform: uppercase;
+  }
+
+  &__text {
     font-size: 20px;
   }
 
-  &__image{
+  &__image {
     width: 335px;
     height: 335px;
     overflow: hidden;
     border-radius: 5px;
   }
 
-  .swiper-button-next, .swiper-button-prev{
+  .swiper-button-next,
+  .swiper-button-prev {
     position: relative;
   }
 
-  &__controls{
+  &__controls {
     display: flex;
     justify-content: center;
     align-items: center;
 
-    &_text{
+    &_text {
       font-size: 12px;
       font-weight: 600;
       text-transform: lowercase;
@@ -189,6 +197,97 @@
     }
   }
 
+  &-white {
+    * {
+      color: white;
+    }
+
+    .swiper-pagination-bullet {
+      background-color: #fff;
+    }
+
+    .swiper-button-next:after,
+    .swiper-container-rtl .swiper-button-prev:after {
+      background-image: url(../img/icons/slider-arrow-white.svg);
+    }
+
+    .swiper-button-prev:after,
+    .swiper-container-rtl .swiper-button-next:after {
+      background-image: url(../img/icons/slider-arrow-white.svg);
+    }
+  }
+
+  &-blue {
+    .slider__controls_text {
+      color: $blue-2;
+    }
+
+    .swiper-pagination-bullet {
+      background-color: $blue-2;
+    }
+
+    .swiper-button-next:after,
+    .swiper-container-rtl .swiper-button-prev:after {
+      background-image: url(../img/icons/slider-arrow-blue.svg);
+    }
+
+    .swiper-button-prev:after,
+    .swiper-container-rtl .swiper-button-next:after {
+      background-image: url(../img/icons/slider-arrow-blue.svg);
+    }
+  }
+
+  &-small-image {
+    .slider__image {
+      width: 237px;
+      height: 409px;
+    }
+  }
 }
 
+.numbers-section {
+  &__card {
+    background-color: $light-grey;
+    padding: 40px;
 
+    &_title {
+      font-size: 40px;
+      color: $blue-2;
+      margin-bottom: 10px;
+      font-weight: bold;
+      font-family: $font-title;
+    }
+
+    &_content {
+      font-size: 16px;
+    }
+  }
+}
+
+.other-cases {
+  .swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    width: 40%;
+  }
+
+  &__card {
+    &_img {
+
+    }
+    &_title {
+      font-size: 24px;
+      width: 100%;
+      max-width: 275px;
+      margin: 30px 0 15px;
+    }
+    &_content {
+      width: 100%;
+      max-width: 350px;
+      font-size: 16px;
+    }
+  }
+}
