--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,8 @@
 html,
 body {
   font-family: "Mont", sans-serif;
-  font-weight: normal; }
+  font-weight: normal;
+  line-height: 1.3; }
 
 h1,
 h2,
@@ -159,7 +160,7 @@ input {
   position: fixed;
   top: 0;
   z-index: 10;
-  padding: 50px 0 15px;
+  padding: 41px 0 15px;
   background-color: #207ADB;
   -webkit-transition: 300ms ease-in-out;
   -o-transition: 300ms ease-in-out;
@@ -186,7 +187,7 @@ input {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    margin-right: 100px; }
+    margin-right: 88px; }
     .header__menu_list {
       list-style: none;
       margin: 0;
@@ -201,12 +202,12 @@ input {
           -ms-flex-align: center;
               align-items: center; }
     .header__menu_item {
-      margin-left: 20px;
-      margin-right: 20px; }
+      margin-left: 22px;
+      margin-right: 22px; }
       .header__menu_item a {
         color: white;
         font-weight: 300;
-        padding: 5px 0 15px;
+        padding: 5px 0 12px;
         border-bottom: 2px solid #ffffff30;
         position: relative;
         display: inline-block; }
@@ -279,7 +280,7 @@ input {
   margin: 0;
   padding: 0; }
   .footer__links_list li {
-    margin-bottom: 15px; }
+    margin-bottom: 25px; }
     .footer__links_list li a {
       color: #AAAAAA;
       font-size: 16px; }
@@ -287,7 +288,7 @@ input {
         color: #1E201D;
         text-decoration: none; }
 .footer__form {
-  padding: 40px 57px;
+  padding: 40px 57px 30px;
   background-color: #FE9828; }
   .footer__form_title {
     color: white;
@@ -340,7 +341,7 @@ input {
 .footer__copyright {
   max-width: 490px;
   width: 100%;
-  padding: 40px 0;
+  padding: 150px 0 50px;
   text-align: center;
   font-size: 11px;
   color: #AAAAAA; }
@@ -386,21 +387,21 @@ input {
           align-items: center;
   position: relative; }
   .first-layout__title {
-    margin-bottom: 250px; }
+    margin-bottom: 241px; }
     .first-layout__title h1 {
       color: #fff; }
   .first-layout__img {
-    width: 65%;
+    width: 81%;
     position: absolute;
-    right: 0;
+    right: -154px;
     bottom: 0; }
 
 /* About page */
 .about-service {
-  padding: 50px 0; }
+  padding: 100px 0; }
   .about-service__spacing {
-    padding-top: 120px;
-    padding-bottom: 120px; }
+    padding-top: 58px;
+    padding-bottom: 58px; }
   .about-service__vertical-title {
     font-family: "Mont", sans-serif;
     text-transform: uppercase;
@@ -414,12 +415,15 @@ input {
             transform: rotate(180deg);
     font-size: 18px;
     color: #207ADB;
-    opacity: 0.5; }
+    opacity: 0.5;
+    margin: 0; }
   .about-service__gallery_item {
     border-radius: 10px;
     overflow: hidden; }
   .about-service__statue {
     width: 170px; }
+  .about-service__line-height p {
+    line-height: 1.65; }
   .about-service__title-icon {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -459,7 +463,8 @@ input {
         text-align: center;
         text-transform: uppercase; }
   .about-service__office-img {
-    padding: 0; }
+    padding: 0;
+    margin-bottom: 100px; }
     .about-service__office-img img {
       width: 100%;
       height: 343px;
@@ -472,7 +477,8 @@ input {
     .about-service__opportunities * {
       color: white; }
     .about-service__opportunities p {
-      font-size: 20px; }
+      font-size: 20px;
+      line-height: 1.65; }
     .about-service__opportunities_block {
       width: 100%;
       max-width: 300px; }
@@ -481,15 +487,22 @@ input {
       font-size: 24px;
       font-family: "Mont", sans-serif; }
     .about-service__opportunities_subtitle {
-      font-size: 20px; }
+      font-size: 20px;
+      margin-bottom: 30px; }
+  .about-service__fz-32 * {
+    font-size: 32px;
+    font-family: "Mont", sans-serif; }
   .about-service__instagram-content {
     width: 100%;
-    max-width: 760px; }
+    max-width: 745px; }
   .about-service__instagram-posts_item {
     -webkit-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
             box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     overflow: hidden; }
+  .about-service__workers {
+    margin-top: 65px;
+    margin-bottom: 65px; }
 
 .slider {
   padding-top: 50px;
@@ -507,7 +520,8 @@ input {
     font-family: "Mont", sans-serif;
     text-transform: uppercase; }
   .slider__text {
-    font-size: 20px; }
+    font-size: 20px;
+    line-height: 1.65; }
   .slider__image {
     width: 335px;
     height: 335px;
@@ -557,13 +571,15 @@ input {
 
 .numbers-section__card {
   background-color: #F8F8F8;
-  padding: 40px; }
+  padding: 40px;
+  height: 100%; }
   .numbers-section__card_title {
     font-size: 40px;
     color: #039BE5;
     margin-bottom: 10px;
     font-weight: bold;
-    font-family: "TTFirsNeue", sans-serif; }
+    font-family: "TTFirsNeue", sans-serif;
+    text-transform: uppercase; }
   .numbers-section__card_content {
     font-size: 16px; }
 
@@ -572,6 +588,10 @@ input {
   height: 100%; }
 .other-cases .swiper-slide {
   width: 40%; }
+.other-cases__title {
+  font-size: 40px;
+  margin-top: 20px;
+  margin-bottom: 70px; }
 .other-cases__card_title {
   font-size: 24px;
   width: 100%;
