--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -9,7 +9,7 @@
 
   position: relative;
   &__title {
-    margin-bottom: 250px;
+    margin-bottom: 241px;
 
     h1 {
       color: #fff;
@@ -17,20 +17,20 @@
   }
 
   &__img {
-    width: 65%;
+    width: 81%;
     position: absolute;
-    right: 0;
+    right: -154px;
     bottom: 0;
   }
 }
 
 /* About page */
 .about-service {
-  padding: 50px 0;
+  padding: 100px 0;
 
   &__spacing {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 58px;
+    padding-bottom: 58px;
   }
 
   &__vertical-title {
@@ -44,6 +44,7 @@
     font-size: 18px;
     color: $blue;
     opacity: 0.5;
+    margin: 0;
   }
 
   &__gallery {
@@ -55,6 +56,12 @@
 
   &__statue {
     width: 170px;
+  }
+
+  &__line-height{
+    p{
+      line-height: 1.65;
+    }
   }
 
   &__title-icon {
@@ -100,6 +107,7 @@
 
   &__office-img {
     padding: 0;
+    margin-bottom: 100px;
     img {
       width: 100%;
       height: 343px;
@@ -117,6 +125,7 @@
 
     p {
       font-size: 20px;
+      line-height: 1.65;
     }
 
     &_block {
@@ -132,12 +141,20 @@
 
     &_subtitle {
       font-size: 20px;
+      margin-bottom: 30px;
+    }
+  }
+
+  &__fz-32{
+    *{
+      font-size: 32px;
+      font-family: $font-body;
     }
   }
 
   &__instagram-content {
     width: 100%;
-    max-width: 760px;
+    max-width: 745px;
   }
 
   &__instagram-posts {
@@ -146,6 +163,11 @@
       border-radius: 5px;
       overflow: hidden;
     }
+  }
+
+  &__workers{
+    margin-top: 65px;
+    margin-bottom: 65px;
   }
 }
 
@@ -170,6 +192,7 @@
 
   &__text {
     font-size: 20px;
+    line-height: 1.65;
   }
 
   &__image {
@@ -249,6 +272,7 @@
   &__card {
     background-color: $light-grey;
     padding: 40px;
+    height: 100%;
 
     &_title {
       font-size: 40px;
@@ -256,6 +280,7 @@
       margin-bottom: 10px;
       font-weight: bold;
       font-family: $font-title;
+      text-transform: uppercase;
     }
 
     &_content {
@@ -274,9 +299,14 @@
     width: 40%;
   }
 
+  &__title{
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 70px;
+  }
+
   &__card {
     &_img {
-
     }
     &_title {
       font-size: 24px;
