--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ body {
   font-family: "Mont", sans-serif;
   font-weight: normal;
   line-height: 1.3; }
+  @media screen and (max-width: 576px) {
+    html,
+    body {
+      line-height: 1.65; } }
 
 h1,
 h2,
@@ -58,6 +62,12 @@ h6 {
 
 h1 {
   font-size: 35px; }
+  @media screen and (max-width: 992px) {
+    h1 {
+      font-size: 30px; } }
+  @media screen and (max-width: 576px) {
+    h1 {
+      font-size: 24px; } }
 
 p {
   margin-bottom: 1em; }
@@ -67,6 +77,14 @@ span {
   color: #1E201D;
   font-size: 24px;
   font-weight: 400; }
+  @media screen and (max-width: 992px) {
+    p,
+    span {
+      font-size: 20px; } }
+  @media screen and (max-width: 576px) {
+    p,
+    span {
+      font-size: 14px; } }
 
 b,
 strong {
@@ -116,6 +134,9 @@ input {
   .main-title__big {
     font-size: 35px;
     display: block; }
+    @media screen and (max-width: 576px) {
+      .main-title__big {
+        font-size: 24px; } }
     .main-title__big::after {
       background-color: #207ADB; }
 
@@ -136,6 +157,9 @@ input {
     height: 255px;
     -o-object-fit: contain;
        object-fit: contain; }
+    @media screen and (max-width: 992px) {
+      .card-bordered img {
+        height: auto; } }
 
 .image-with-shadow {
   overflow: hidden;
@@ -165,6 +189,9 @@ input {
   -webkit-transition: 300ms ease-in-out;
   -o-transition: 300ms ease-in-out;
   transition: 300ms ease-in-out; }
+  @media screen and (max-width: 992px) {
+    .header {
+      padding-top: 30px; } }
   .header-active {
     padding: 15px 0;
     background-color: #267fdf; }
@@ -283,18 +310,51 @@ input {
     margin-bottom: 25px; }
     .footer__links_list li a {
       color: #AAAAAA;
-      font-size: 16px; }
+      font-size: 16px;
+      text-transform: capitalize; }
       .footer__links_list li a:hover {
         color: #1E201D;
         text-decoration: none; }
+      @media screen and (max-width: 576px) {
+        .footer__links_list li a {
+          font-size: 14px; } }
+.footer__social ul li a {
+  text-transform: lowercase;
+  font-style: italic; }
+@media screen and (max-width: 992px) {
+  .footer__social .footer__links_title {
+    display: none; }
+  .footer__social ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .footer__social ul li {
+      margin-right: 40px; } }
+  @media screen and (max-width: 992px) and (max-width: 576px) {
+    .footer__social ul {
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; }
+      .footer__social ul li {
+        margin-right: 10px; } }
+
 .footer__form {
   padding: 40px 57px 30px;
   background-color: #FE9828; }
+  @media screen and (max-width: 576px) {
+    .footer__form {
+      padding: 25px; } }
   .footer__form_title {
     color: white;
     font-size: 24px;
     margin-bottom: 30px;
     font-style: italic; }
+    @media screen and (max-width: 576px) {
+      .footer__form_title {
+        font-size: 18px;
+        width: 80%; } }
   .footer__form_input {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -317,6 +377,9 @@ input {
         top: -5px;
         left: 0;
         font-size: 11px; }
+      @media screen and (max-width: 576px) {
+        .footer__form_input label {
+          font-size: 14px; } }
     .footer__form_input input {
       width: 100%;
       background-color: transparent;
@@ -345,6 +408,12 @@ input {
   text-align: center;
   font-size: 11px;
   color: #AAAAAA; }
+  @media screen and (max-width: 992px) {
+    .footer__copyright {
+      padding: 100px 0 50px; } }
+  @media screen and (max-width: 576px) {
+    .footer__copyright {
+      padding: 50px 0 30px; } }
 
 .i-legal-hammer {
   background-image: url(../img/icons/legal-hammer.svg);
@@ -385,23 +454,44 @@ input {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow: hidden;
   position: relative; }
+  @media screen and (max-width: 992px) {
+    .first-layout {
+      height: 619px; } }
   .first-layout__title {
     margin-bottom: 241px; }
     .first-layout__title h1 {
       color: #fff; }
+    @media screen and (max-width: 992px) {
+      .first-layout__title {
+        margin-bottom: 150px; } }
   .first-layout__img {
     width: 81%;
     position: absolute;
     right: -154px;
     bottom: 0; }
+    @media screen and (max-width: 992px) {
+      .first-layout__img {
+        width: 100%; } }
+    @media screen and (max-width: 576px) {
+      .first-layout__img {
+        width: 175%;
+        right: -180px; } }
 
 /* About page */
 .about-service {
   padding: 100px 0; }
+  @media screen and (max-width: 992px) {
+    .about-service {
+      padding: 50px 0; } }
   .about-service__spacing {
     padding-top: 58px;
     padding-bottom: 58px; }
+    @media screen and (max-width: 576px) {
+      .about-service__spacing {
+        padding-top: 30px;
+        padding-bottom: 30px; } }
   .about-service__vertical-title {
     font-family: "Mont", sans-serif;
     text-transform: uppercase;
@@ -417,6 +507,9 @@ input {
     color: #207ADB;
     opacity: 0.5;
     margin: 0; }
+    @media screen and (max-width: 576px) {
+      .about-service__vertical-title {
+        font-size: 15px; } }
   .about-service__gallery_item {
     border-radius: 10px;
     overflow: hidden; }
@@ -430,7 +523,9 @@ input {
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
     .about-service__title-icon .icon {
       margin-right: 20px;
       position: relative;
@@ -440,6 +535,9 @@ input {
       text-transform: uppercase;
       font-family: "Mont", sans-serif;
       font-weight: bold; }
+      @media screen and (max-width: 576px) {
+        .about-service__title-icon_text {
+          font-size: 22px; } }
   .about-service__block-bg {
     background-color: #207ADB;
     border-radius: 10px;
@@ -465,6 +563,9 @@ input {
   .about-service__office-img {
     padding: 0;
     margin-bottom: 100px; }
+    @media screen and (max-width: 992px) {
+      .about-service__office-img {
+        margin-bottom: 50px; } }
     .about-service__office-img img {
       width: 100%;
       height: 343px;
@@ -492,6 +593,12 @@ input {
   .about-service__fz-32 * {
     font-size: 32px;
     font-family: "Mont", sans-serif; }
+    @media screen and (max-width: 992px) {
+      .about-service__fz-32 * {
+        font-size: 24px; } }
+    @media screen and (max-width: 576px) {
+      .about-service__fz-32 * {
+        font-size: 20px; } }
   .about-service__instagram-content {
     width: 100%;
     max-width: 745px; }
@@ -502,31 +609,50 @@ input {
     overflow: hidden; }
   .about-service__workers {
     margin-top: 65px;
-    margin-bottom: 65px; }
+    margin-bottom: 65px;
+    overflow: auto; }
+    .about-service__workers img {
+      width: 1036px; }
 
 .slider {
   padding-top: 50px;
   position: relative; }
+  @media screen and (max-width: 576px) {
+    .slider {
+      padding-top: 20px; } }
   .slider__title {
     font-size: 35px;
     font-weight: bold;
     text-transform: uppercase;
     font-family: "Mont", sans-serif;
     margin-bottom: 30px; }
+    @media screen and (max-width: 576px) {
+      .slider__title {
+        font-size: 25px; } }
   .slider__subtitle {
     margin-bottom: 40px;
     font-weight: 600;
     font-size: 20px;
     font-family: "Mont", sans-serif;
     text-transform: uppercase; }
+    @media screen and (max-width: 576px) {
+      .slider__subtitle {
+        font-size: 14px; } }
   .slider__text {
     font-size: 20px;
     line-height: 1.65; }
+    @media screen and (max-width: 576px) {
+      .slider__text {
+        font-size: 14px; } }
   .slider__image {
-    width: 335px;
+    width: 100%;
+    max-width: 335px;
     height: 335px;
     overflow: hidden;
     border-radius: 5px; }
+    @media screen and (max-width: 992px) {
+      .slider__image {
+        height: auto; } }
   .slider .swiper-button-next,
   .slider .swiper-button-prev {
     position: relative; }
@@ -568,11 +694,22 @@ input {
   .slider-small-image .slider__image {
     width: 237px;
     height: 409px; }
+    @media screen and (max-width: 576px) {
+      .slider-small-image .slider__image {
+        width: 100%;
+        height: auto;
+        margin-top: 30px; } }
+  @media screen and (max-width: 576px) {
+    .slider .swiper-pagination {
+      display: none; } }
 
 .numbers-section__card {
   background-color: #F8F8F8;
   padding: 40px;
   height: 100%; }
+  @media screen and (max-width: 576px) {
+    .numbers-section__card {
+      padding: 30px; } }
   .numbers-section__card_title {
     font-size: 40px;
     color: #039BE5;
@@ -580,6 +717,9 @@ input {
     font-weight: bold;
     font-family: "TTFirsNeue", sans-serif;
     text-transform: uppercase; }
+    @media screen and (max-width: 576px) {
+      .numbers-section__card_title {
+        font-size: 35px; } }
   .numbers-section__card_content {
     font-size: 16px; }
 
@@ -587,19 +727,39 @@ input {
   width: 100%;
   height: 100%; }
 .other-cases .swiper-slide {
-  width: 40%; }
+  width: 100%;
+  max-width: 490px; }
+  @media screen and (max-width: 992px) {
+    .other-cases .swiper-slide {
+      max-width: 400px; } }
+  @media screen and (max-width: 576px) {
+    .other-cases .swiper-slide {
+      max-width: 230px; } }
 .other-cases__title {
   font-size: 40px;
   margin-top: 20px;
   margin-bottom: 70px; }
+  @media screen and (max-width: 992px) {
+    .other-cases__title {
+      font-size: 32px; } }
+  @media screen and (max-width: 576px) {
+    .other-cases__title {
+      font-size: 24px;
+      margin-bottom: 40px; } }
 .other-cases__card_title {
   font-size: 24px;
   width: 100%;
   max-width: 275px;
   margin: 30px 0 15px; }
+  @media screen and (max-width: 576px) {
+    .other-cases__card_title {
+      font-size: 18px; } }
 .other-cases__card_content {
   width: 100%;
   max-width: 350px;
   font-size: 16px; }
+  @media screen and (max-width: 576px) {
+    .other-cases__card_content {
+      font-size: 14px; } }
 
 /* Sliders */
