--- a/sass/_classes.scss
+++ b/sass/_classes.scss
@@ -22,6 +22,10 @@
     font-size: 35px;
     display: block;
 
+    @include mobile{
+      font-size: 24px;
+    }
+
     &::after{
       background-color: $blue;
     }
@@ -39,7 +43,13 @@
   img{
     height: 255px;
     object-fit: contain;
+
+    @include netbook{
+      height: auto;
+    }
   }
+
+
 }
 
 .image-with-shadow{
