--- a/sass/_template.scss
+++ b/sass/_template.scss
@@ -13,6 +13,10 @@ body {
   font-family: $font-body;
   font-weight: normal;
   line-height: 1.3;
+
+  @include mobile{
+    line-height: 1.65;
+  }
 }
 
 h1,
@@ -27,6 +31,14 @@ h6 {
 
 h1 {
   font-size: 35px;
+
+  @include netbook{
+    font-size: 30px;
+  }
+
+  @include mobile{
+    font-size: 24px;
+  }
 }
 
 p{
@@ -38,6 +50,14 @@ span {
   color: $black;
   font-size: 24px;
   font-weight: 400;
+
+  @include netbook{
+    font-size: 20px;
+  }
+
+  @include mobile{
+    font-size: 14px;
+  }
 }
 
 b,
