--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -7,12 +7,22 @@
   display: flex;
   align-items: center;
 
+  overflow: hidden;
+
   position: relative;
+
+  @include netbook {
+    height: 619px;
+  }
   &__title {
     margin-bottom: 241px;
 
     h1 {
       color: #fff;
+    }
+
+    @include netbook {
+      margin-bottom: 150px;
     }
   }
 
@@ -21,6 +31,15 @@
     position: absolute;
     right: -154px;
     bottom: 0;
+
+    @include netbook {
+      width: 100%;
+    }
+
+    @include mobile{
+      width: 175%;
+      right: -180px;
+    }
   }
 }
 
@@ -28,9 +47,18 @@
 .about-service {
   padding: 100px 0;
 
+  @include netbook {
+    padding: 50px 0;
+  }
+
   &__spacing {
     padding-top: 58px;
     padding-bottom: 58px;
+
+    @include mobile {
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
   }
 
   &__vertical-title {
@@ -45,6 +73,10 @@
     color: $blue;
     opacity: 0.5;
     margin: 0;
+
+    @include mobile {
+      font-size: 15px;
+    }
   }
 
   &__gallery {
@@ -58,8 +90,8 @@
     width: 170px;
   }
 
-  &__line-height{
-    p{
+  &__line-height {
+    p {
       line-height: 1.65;
     }
   }
@@ -67,6 +99,7 @@
   &__title-icon {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
 
     .icon {
       margin-right: 20px;
@@ -79,6 +112,10 @@
       text-transform: uppercase;
       font-family: $font-body;
       font-weight: bold;
+
+      @include mobile{
+        font-size: 22px;
+      }
     }
   }
 
@@ -108,6 +145,11 @@
   &__office-img {
     padding: 0;
     margin-bottom: 100px;
+
+    @include netbook {
+      margin-bottom: 50px;
+    }
+
     img {
       width: 100%;
       height: 343px;
@@ -145,10 +187,18 @@
     }
   }
 
-  &__fz-32{
-    *{
+  &__fz-32 {
+    * {
       font-size: 32px;
       font-family: $font-body;
+
+      @include netbook {
+        font-size: 24px;
+      }
+
+      @include mobile{
+        font-size: 20px;
+      }
     }
   }
 
@@ -165,21 +215,35 @@
     }
   }
 
-  &__workers{
+  &__workers {
     margin-top: 65px;
     margin-bottom: 65px;
+
+    overflow: auto;
+
+    img {
+      width: 1036px;
+    }
   }
 }
 
 .slider {
   padding-top: 50px;
   position: relative;
+
+  @include mobile{
+    padding-top: 20px;
+  }
   &__title {
     font-size: 35px;
     font-weight: bold;
     text-transform: uppercase;
     font-family: $font-body;
     margin-bottom: 30px;
+
+    @include mobile{
+      font-size: 25px;
+    }
   }
 
   &__subtitle {
@@ -188,18 +252,31 @@
     font-size: 20px;
     font-family: $font-body;
     text-transform: uppercase;
+
+    @include mobile{
+      font-size: 14px;
+    }
   }
 
   &__text {
     font-size: 20px;
     line-height: 1.65;
+
+    @include mobile{
+      font-size: 14px;
+    }
   }
 
   &__image {
-    width: 335px;
+    width: 100%;
+    max-width: 335px;
     height: 335px;
     overflow: hidden;
     border-radius: 5px;
+
+    @include netbook {
+      height: auto;
+    }
   }
 
   .swiper-button-next,
@@ -264,6 +341,18 @@
     .slider__image {
       width: 237px;
       height: 409px;
+
+      @include mobile{
+        width: 100%;
+        height: auto;
+        margin-top: 30px;
+      }
+    }
+  }
+
+  .swiper-pagination{
+    @include mobile{
+      display: none;
     }
   }
 }
@@ -274,6 +363,10 @@
     padding: 40px;
     height: 100%;
 
+    @include mobile{
+      padding: 30px;
+    }
+
     &_title {
       font-size: 40px;
       color: $blue-2;
@@ -281,6 +374,10 @@
       font-weight: bold;
       font-family: $font-title;
       text-transform: uppercase;
+
+      @include mobile{
+        font-size: 35px;
+      }
     }
 
     &_content {
@@ -296,13 +393,30 @@
   }
 
   .swiper-slide {
-    width: 40%;
+    width: 100%;
+    max-width: 490px;
+
+    @include netbook{
+      max-width: 400px;
+    }
+    @include mobile{
+      max-width: 230px;
+    }
   }
 
-  &__title{
+  &__title {
     font-size: 40px;
     margin-top: 20px;
     margin-bottom: 70px;
+
+    @include netbook{
+      font-size: 32px;
+    }
+
+    @include mobile{
+      font-size: 24px;
+      margin-bottom: 40px;
+    }
   }
 
   &__card {
@@ -313,11 +427,19 @@
       width: 100%;
       max-width: 275px;
       margin: 30px 0 15px;
+
+      @include mobile{
+        font-size: 18px;
+      }
     }
     &_content {
       width: 100%;
       max-width: 350px;
       font-size: 16px;
+
+      @include mobile{
+        font-size: 14px;
+      }
     }
   }
 }
