--- a/sass/_template.scss
+++ b/sass/_template.scss
@@ -70,6 +70,10 @@ blockquote{
   font-style: italic;
   text-align: right;
   font-size: 25px;
+
+  @include mobile{
+    font-size: 18px;
+  }
 }
 
 a {
