--- a/sass/_classes.scss
+++ b/sass/_classes.scss
@@ -73,9 +73,13 @@
   font-weight: bold;
 }
 .h2 {
-  font-size: 32px;
+  font-size: 35px;
   text-transform: uppercase;
   margin: 35px 0;
+
+  @include mobile{
+    font-size: 25px;
+  }
 }
 
 .uppercase{
