--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -10,6 +10,7 @@ $grey: #AAAAAA;
 
 /* Others */
 $box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.15);
+$box-shadow-2: 2px 2px 5px rgba(0, 0, 0, 0.15);
 
 /* Fonts */
 $font-body: "Mont", sans-serif;
