--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -225,7 +225,7 @@
           text-transform: uppercase;
           font-family: $font-title;
 
-          &:hover{
+          &:hover {
             text-decoration: none;
             border: none;
           }
@@ -425,12 +425,12 @@
 
           @include mobile {
             font-size: 20px;
-            padding-left: 15px;
+            padding-left: 5px;
           }
 
           &::before {
             content: counter(my-awesome-counter);
-            color: $orange;
+            color: $red;
             font-weight: bold;
             font-size: 40px;
             position: absolute;
@@ -440,22 +440,88 @@
             font-family: $font-title;
 
             @include mobile {
-              font-size: 30px;
+              font-size: 20px;
+              top: 2px;
             }
           }
         }
       }
     }
 
-    &_test{
+    &_test {
       display: flex;
       overflow-x: scroll;
-      
-      &_item{
+      &::-webkit-scrollbar {
+        width: 10px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: transparent;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: transparent;
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: transparent;
+      }
+
+      &_item {
         min-width: 218px;
         height: 386px;
-        overflow: hidden;
-        margin-right: 40px;
+        margin-right: 28px;
+
+        @include mobile {
+          min-width: 100%;
+          height: auto;
+
+          img {
+            border-radius: 5px;
+            box-shadow: $box-shadow-2;
+          }
+        }
+      }
+    }
+
+    &_gallery {
+      @include mobile {
+        padding-top: 20px;
+
+        .container {
+          padding-left: 0;
+          padding-right: 0;
+        }
+
+        .h2 {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+        .about-service__tools_test {
+          padding: 20px;
+        }
+      }
+    }
+
+    &_game {
+      padding-top: 5px;
+      .about-service__tools_test_item {
+        min-width: 183px;
+        margin-right: 20px;
+
+        img {
+          border-radius: 5px;
+          box-shadow: $box-shadow-2;
+        }
+
+        @include mobile {
+          min-width: 100%;
+          height: auto;
+
+          img {
+            box-shadow: $box-shadow-2;
+          }
+        }
       }
     }
   }
