--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -22,6 +22,7 @@
           color: $grey;
           font-size: 16px;
           text-transform: capitalize;
+          transition: 300ms ease;
 
           &:hover {
             color: $black;
@@ -79,7 +80,7 @@
       color: white;
       font-size: 24px;
       margin-bottom: 30px;
-      font-style: italic;
+      font-weight: 600;
 
       @include mobile{
         font-size: 18px;
