--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -27,6 +27,7 @@
       @include mobile {
         line-height: 1.3;
       }
+      text-shadow: 0px 3px 3px #00000060;
     }
 
     @include netbook {
