--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -4,6 +4,7 @@
       color: $grey;
       font-weight: bold;
       margin-bottom: 40px;
+      font-size: 24px;
     }
 
     &_list {
@@ -21,7 +22,6 @@
         a {
           color: $grey;
           font-size: 16px;
-          text-transform: capitalize;
           transition: 300ms ease;
 
           &:hover {
@@ -80,7 +80,7 @@
       color: white;
       font-size: 24px;
       margin-bottom: 30px;
-      font-weight: 600;
+      font-weight: 500;
 
       @include mobile{
         font-size: 18px;
