--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -4,7 +4,7 @@
   z-index: 10;
   padding: 41px 0 15px;
 
-  background-color: $blue;
+  background-color: transparent;
 
   transition: 300ms ease-in-out;
 
