--- a/sass/pages/_gallery-legal.scss
+++ b/sass/pages/_gallery-legal.scss
@@ -404,7 +404,7 @@
   &__content {
     &_item {
       margin-top: 35px;
-      img {
+      video {
         object-fit: contain;
         object-position: center;
         margin: auto;
