--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -23,6 +23,14 @@
 
     display: flex;
     align-items: center;
+
+    a{
+      color: white;
+      font-family: $font-title;
+      font-size: 34px;
+      font-weight: bold;
+      text-decoration: none;
+    }
   }
 
   &__menu {
