--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -22,7 +22,7 @@
     height: 100%;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     a{
       color: white;
@@ -146,7 +146,7 @@
 
   &__navmenu {
     position: absolute;
-    top: -100%;
+    top: -110%;
     z-index: 3;
     width: 100%;
     height: 100vh;
