--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,12 @@
 /* Colors */
 $blue: #207ADB;
 $blue-2: #039BE5;
+$dark-blue: #132740;
 $orange: #FE9828;
 $red: #F54528;
 $black: #1E201D;
 $border: #DBDBDB;
+$asd: #EDEDED;
 $light-grey: #F8F8F8;
 $grey: #AAAAAA;
 
