--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -36,8 +36,7 @@
   &__menu {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    margin-right: 50px;
+    justify-content: center;
     &_list {
       list-style: none;
       margin: 0;
