--- a/sass/_classes.scss
+++ b/sass/_classes.scss
@@ -72,21 +72,36 @@
 .font-bold {
   font-weight: bold;
 }
+.text-center{
+  text-align: center;
+}
 .h2 {
   font-size: 35px;
   text-transform: uppercase;
   margin: 35px 0;
 
-  @include mobile{
+  @include mobile {
     font-size: 25px;
   }
 }
 
-.uppercase{
+.uppercase {
   text-transform: uppercase;
 }
 
-.lock{
+.lock {
   overflow: hidden;
 }
 
+.block-spacing {
+  padding-top: 58px;
+  padding-bottom: 58px;
+
+  @include mobile {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+.position-relative{
+  position: relative;
+}
