--- a/sass/_template.scss
+++ b/sass/_template.scss
@@ -15,9 +15,17 @@ body {
   font-weight: normal;
   line-height: 1.3;
 
-  @include mobile{
+  @include mobile {
     line-height: 1.65;
   }
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+html{
+
 }
 
 h1,
@@ -33,16 +41,16 @@ h6 {
 h1 {
   font-size: 35px;
 
-  @include netbook{
+  @include netbook {
     font-size: 30px;
   }
 
-  @include mobile{
+  @include mobile {
     font-size: 24px;
   }
 }
 
-p{
+p {
   margin-bottom: 1em;
 }
 
@@ -52,11 +60,11 @@ span {
   font-size: 24px;
   font-weight: 400;
 
-  @include netbook{
+  @include netbook {
     font-size: 20px;
   }
 
-  @include mobile{
+  @include mobile {
     font-size: 14px;
   }
 }
@@ -66,12 +74,12 @@ strong {
   font-weight: bold;
 }
 
-blockquote{
+blockquote {
   font-style: italic;
   text-align: right;
   font-size: 25px;
 
-  @include mobile{
+  @include mobile {
     font-size: 18px;
   }
 }
@@ -80,13 +88,14 @@ a {
   font-family: $font-body;
 }
 
-ul{
+ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-img, video {
+img,
+video {
   width: 100%;
   height: auto;
   display: block;
@@ -104,7 +113,7 @@ button {
   }
 }
 
-input{
+input {
   width: 100%;
   border: none;
   padding: 5px 15px;
@@ -114,12 +123,9 @@ input{
   }
 }
 
-
-.container{
-  @include mobile{
+.container {
+  @include mobile {
     padding-left: 20px;
     padding-right: 20px;
   }
 }
-
-
