--- a/sass/sections/_footer.scss
+++ b/sass/sections/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  padding-top: 100px;
   &__links {
     &_title {
       color: $grey;
@@ -142,7 +143,7 @@
   &__copyright {
     max-width: 490px;
     width: 100%;
-    padding: 150px 0 50px;
+    padding: 80px 0 40px;
     text-align: center;
     font-size: 11px;
     color: $grey;
@@ -153,6 +154,19 @@
 
     @include mobile{
       padding: 50px 0 30px;
+    }
+  }
+
+  &-dark{
+    background: black;
+
+    .footer__links_title{
+      color: white;
+    }
+
+
+    .footer__links_list li a:hover{
+      color: white;
     }
   }
 }
